--- a/public_html/style.css
+++ b/public_html/style.css
@@ -25,3 +25,10 @@ body {
   background-position:center;
   background-size: cover;
 }
+.gallery {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content:space-around;
+  flex-wrap: wrap;
+}
