--- a/public_html/flex/main.css
+++ b/public_html/flex/main.css
@@ -34,9 +34,9 @@ a {
 .gallery {
   margin-top: 20px;
   display: flex;
-  flex-direction: row reverse;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: center;
+  justify-content:space-around;
+  flex-direction: row;
 
 }
 
