--- a/quiz/templates/index.html
+++ b/quiz/templates/index.html
@@ -6,12 +6,21 @@
 
 <head>
 <meta charset="utf-8" />
-<title>bez nazwy</title>
+<title>Quiz - pytania dla kozaków</title>
 <meta name="generator" content="Geany 1.32" />
+<style type="text/css">
+    #menu li { display: inline; }
+</style>
 </head>
 
 <body>
-
+    <ul id="menu">
+        <li><a href="{{ url_for('index') }}">Strona główna</a></li>
+        <li><a href="{{ url_for('lista') }}">Lista pytań</a></li>
+        <li><a href="{{ url_for('quiz') }}">Quiz</a></li>
+        <li><a href="#">Dodaj pytanie</a></li>
+    </ul>
+    <h1>Pytania dla odważnych</h1>
 </body>
 
 </html>
