--- a/quiz/templates/index.html
+++ b/quiz/templates/index.html
@@ -1,28 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<!--
-   index.html
--->
+{% extends "szablon.html" %}
+{% block tytul %}Quiz - pytania dla kozaków{% endblock %}
+{% block h1 %}Pytania dla odważnych{% endblock %}
 
-<head>
-<meta charset="utf-8" />
-<title>Quiz - pytania dla kozaków</title>
-<meta name="generator" content="Geany 1.32" />
-<style type="text/css">
-    #menu li { display: inline; }
-    .info {color: blue;}
-</style>
-</head>
-
-<body>
-    <ul id="menu">
-        <li><a href="{{ url_for('index') }}">Strona główna</a></li>
-        <li><a href="{{ url_for('lista') }}">Lista pytań</a></li>
-        <li><a href="{{ url_for('quiz') }}">Quiz</a></li>
-        <li><a href="#">Dodaj pytanie</a></li>
-    </ul>
-    <h1>Pytania dla odważnych</h1>
-    
+{% block tresc %}
     <div id="komunikaty">
         {% with komunikaty = get_flashed_messages(with_categories=true) %}
         {% if komunikaty %}
@@ -32,6 +12,4 @@
         {% endif %}
         {% endwith %}
     </div>
-</body>
-
-</html>
+{% endblock %}
