--- a/quiz/templates/quiz.html
+++ b/quiz/templates/quiz.html
@@ -1,17 +1,8 @@
-<!DOCTYPE html>
-<html lang="pl">
-<!--
-   strona.html
--->
+{% extends "szablon.html" %}
+{% block tytul %}Quiz - odpowiedz na pytania{% endblock %}
+{% block h1 %}Quiz - odpowiedz na pytania{% endblock %}
 
-<head>
-<meta charset="utf-8" />
-<title>Moja strona</title>
-</head>
-
-<body>
-    <h1> Quiz - odpowiedz na pytania</h1>
-    
+{% block tresc %}
     <form method="POST">
     
     {% for p in query %}
@@ -29,6 +20,4 @@
     {% endfor %}
     <input type="submit" value="Zapisz odpowiedzi">
     </form>
-</body>
-
-</html>
+{% endblock %}
