--- a/quiz/templates/lista.html
+++ b/quiz/templates/lista.html
@@ -4,7 +4,7 @@
 
 {% block tresc %}
     {% for p in query %}
-    <p>
+    <p class="lead">
         {{ p.id }} {{ p.pytanie }}
     </p>
     {% endfor %}
