--- a/quiz/templates/szablon.html
+++ b/quiz/templates/szablon.html
@@ -54,6 +54,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
+            <h1>Odpowoiedz na pytania wybrane przez naszych ekspertów i zgarnij nagrodę.</h1>
             {% block tresc %}
             {% endblock %}
           </div>
@@ -62,7 +63,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-5 bg-dark fixed-bottom">
       <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; Moja Strona 2019</p>
       </div>
