--- a/quiz/templates/szablon.html
+++ b/quiz/templates/szablon.html
@@ -54,7 +54,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h1>Odpowoiedz na pytania wybrane przez naszych ekspertów i zgarnij nagrodę.</h1>
+            <h1>Odpowiedz na pytania wybrane przez naszych ekspertów i zgarnij nagrodę.</h1>
             {% block tresc %}
             {% endblock %}
           </div>
