--- a/quiz/templates/szablon.html
+++ b/quiz/templates/szablon.html
@@ -15,6 +15,7 @@
 
     <!-- Custom styles for this template -->
     <link href="{{ url_for('static', filename='css/scrolling-nav.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 
   </head>
 
@@ -50,7 +51,7 @@
       </div>
     </header>
 
-    <section id="about">
+    <section id="quiz">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
