--- a/quiz/templates/dodaj.html
+++ b/quiz/templates/dodaj.html
@@ -1,6 +1,6 @@
 {% extends "szablon.html" %}
-{% block tytul %}Quiz - dodaj pytanie{% endblock %}
-{% block h1 %}Quiz - dodaj pytanie{% endblock %}
+{% block tytul %}Quiz – dodaj pytanie{% endblock %}
+{% block h1 %}Quiz – dodaj pytanie{% endblock %}
 
 {% block tresc %}
     <form method="POST">
@@ -11,8 +11,14 @@
     {{ form.kategoria.label }}<br>
     {{ form.kategoria(class="form-control") }}<br>
     <br>
-    {% for o in form.odpowiedzi %}
+    <label>Podaj odpowiedzi i zaznacz poprawną</label><br>
     
+    <ol>
+    {% for o in form.odpowiedzi %}
+        <li>{{ o }}</li>
+    {% endfor %}
+    </ol>
+
     <input type="submit" value="Zapisz pytanie">
     </form>
 {% endblock %}
