--- a/quiz/templates/dodaj.html
+++ b/quiz/templates/dodaj.html
@@ -4,6 +4,7 @@
 
 {% block tresc %}
     <form method="POST">
+    {{ form.csrf_token}}
     
     {{ form.pytanie.label }}<br>
     {{ form.pytanie }}<br>
@@ -12,7 +13,7 @@
     {{ form.kategoria(class="form-control") }}<br>
     <br>
     <label>Podaj odpowiedzi i zaznacz poprawną</label><br>
-    
+
     <ol>
     {% for o in form.odpowiedzi %}
         <li>{{ o }}</li>
