--- a/quiz/templates/lista.html
+++ b/quiz/templates/lista.html
@@ -7,7 +7,7 @@
     {% for p in query %}
     <li>
         {{ p.pytanie }}
-        <a href="{{url_form('edytuj', pid = p.id)}}" class="btn btn-primary">Edytuj</a>
+        <a href="{{ url_for('edytuj', pid=p.id) }}" class="btn btn-primary">Edytuj</a>
     </li>
     {% endfor %}
 </ol>
