--- a/quiz/templates/lista.html
+++ b/quiz/templates/lista.html
@@ -8,6 +8,7 @@
     <li>
         {{ p.pytanie }}
         <a href="{{ url_for('edytuj', pid=p.id) }}" class="btn btn-primary">Edytuj</a>
+        <a href="{{ url_for('usun', pid=p.id) }}" class="btn btn-primary">Usuń</a>
     </li>
     {% endfor %}
 </ol>
