--- a/quiz/templates/szablon.html
+++ b/quiz/templates/szablon.html
@@ -37,7 +37,7 @@
               <a class="nav-link js-scroll-trigger" href="{{ url_for('quiz') }}">Quiz</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="{{ url_for('dodaj') }}">Dodaj</a>
+              <a class="nav-link js-scroll-trigger" href="{{ url_for('dodaj') }}">Dodaj uczniów</a>
             </li>
           </ul>
         </div>
@@ -47,7 +47,7 @@
     <header class="bg-primary text-white">
       <div class="container text-center">
         <h1>{% block h1 %}{% endblock %}</h1>
-        <p class="lead">Moja pierwsza aplikacja we Flasku</p>
+        <p class="lead">Dziennik elektroniczny Regmobi</p>
       </div>
     </header>
 
@@ -73,7 +73,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Jakub71 2019</p>
       </div>
       <!-- /.container -->
     </footer>
